--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,7 +150,7 @@ jobs:
 
   build-only-ios:
     name: Build only (iOS)
-    runs-on: macos-15-large
+    runs-on: macos-15-intel
     timeout-minutes: 200
     steps:
       - name: Checkout
