--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,7 +150,7 @@ jobs:
 
   build-only-ios:
     name: Build only (iOS)
-    runs-on: macos-15-intel
+    runs-on: macos-latest
     timeout-minutes: 200
     steps:
       - name: Checkout
@@ -170,7 +170,7 @@ jobs:
         run: sudo xcode-select -switch /Applications/Xcode_16.4.app
 
       - name: Build
-        run: dotnet build -c Release osu.iOS.slnf
+        run: dotnet build -c Release osu.iOS.slnf /p:MaxCpuCount=1
 
       - name: Upload iOS build artifacts  
         uses: actions/upload-artifact@v4  
